--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ os: WMF 5
 skip_commits:
   message: /updated (readme|doc).*|update (readme|doc).*s/
 
+install:
+  - ps: 'function Get-DhcpServerInDC {}' | out-file ./DhcpServer.psm1 -encoding utf8; ipmo ./DhcpServer.psm1
+
 build: false
 
 test_script:
