--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,8 @@ skip_commits:
   message: /updated (readme|doc).*|update (readme|doc).*s/
 
 install:
-  - ps: 'function Get-DhcpServerInDC {}' | out-file ./DhcpServer.psm1 -encoding utf8; ipmo ./DhcpServer.psm1
+  - ps: Add-Content -Path ./DhcpServer.psm1 -Value 'function Get-DhcpServerInDC {}' -Encoding UTF8
+  - ps: ipmo ./DhcpServer.psm1
 
 build: false
 
